[gd_scene load_steps=13 format=3 uid="uid://bcwgxtdpxedfs"]

[ext_resource type="Script" path="res://ui/end_run_ui.gd" id="1_srtu4"]
[ext_resource type="Texture2D" uid="uid://blmksg5mhjtx1" path="res://ui/run_over.png" id="1_x1ts2"]
[ext_resource type="Theme" uid="uid://ca0voepivqqpx" path="res://ui/menu_theme.tres" id="1_yp73v"]
[ext_resource type="Shader" path="res://ui/background_tiling.gdshader" id="2_8cspm"]
[ext_resource type="Texture2D" uid="uid://cjepr0t54tobo" path="res://materials/pluses_small.png" id="3_y734i"]
[ext_resource type="Texture2D" uid="uid://b2cqi0atj3pme" path="res://materials/pluses_large.png" id="4_xdavi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_157u5"]
shader = ExtResource("2_8cspm")
shader_parameter/motion = Vector2(8, -8)
shader_parameter/scale = 2.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0f1w"]
shader = ExtResource("2_8cspm")
shader_parameter/motion = Vector2(-5, -5)
shader_parameter/scale = 2.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_g18hy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:anchor_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("overlay:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("overlay:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("overlay:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("overlay:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_h0cf8"]
resource_name = "REST"

[sub_resource type="Animation" id="Animation_yii8v"]
resource_name = "load"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:anchor_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("overlay:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.133333, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("overlay:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.133333, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("overlay:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.133333, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("overlay:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.133333, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbynj"]
_data = {
"RESET": SubResource("Animation_g18hy"),
"REST": SubResource("Animation_h0cf8"),
"load": SubResource("Animation_yii8v")
}

[node name="EndRunUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yp73v")
script = ExtResource("1_srtu4")

[node name="bg" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="pluses_small" type="TextureRect" parent="bg"]
material = SubResource("ShaderMaterial_157u5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_y734i")
expand_mode = 1
stretch_mode = 1

[node name="pluses_large" type="TextureRect" parent="bg"]
material = SubResource("ShaderMaterial_e0f1w")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_xdavi")
expand_mode = 1
stretch_mode = 1

[node name="overlay" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -137.5
offset_right = 200.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_x1ts2")

[node name="VBoxContainer" type="VBoxContainer" parent="overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="spacer" type="Control" parent="overlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="score_label" type="Label" parent="overlay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Score XYZ"

[node name="buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="buttons"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="buttons/MarginContainer"]
layout_mode = 2

[node name="spacer" type="Control" parent="buttons/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="buttons/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="retry" type="Button" parent="buttons/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Retry"

[node name="spacer3" type="Control" parent="buttons/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="menu" type="Button" parent="buttons/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Menu"

[node name="spacer2" type="Control" parent="buttons/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbynj")
}
autoplay = "load"

[connection signal="pressed" from="buttons/MarginContainer/VBoxContainer/HBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="buttons/MarginContainer/VBoxContainer/HBoxContainer/menu" to="." method="_on_menu_pressed"]
